# GeneralizedMotorcycleGraph

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md
CMake/Modules/: FindGurobi.cmake
ext/RectangleBinPack/: CMakeLists.txt
ext/RectangleBinPack/include/RectangleBinPack/: MaxRectsBinPack.h
ext/RectangleBinPack/src/: GuillotineBinPack.cpp  MaxRectsBinPack.cpp  ShelfBinPack.cpp  ShelfNextFitBinPack.cpp  SkylineBinPack.cpp
ext/scaffold-map/igl/: scaf.cpp  scaf.h
glsl/: clear.frag  clear.vert  constant_color.frag  cylinder.frag  cylinder.geom  cylinder.vert  mesh_colors_quad.tcs  mesh_colors_quad.tes  mesh_colors_tri.tcs  mesh_colors_tri.tes  mesh_flat.vert  simple.vert  sphere.frag  sphere.geom  sphere.vert
include/: ArclengthStrategyGurobi.h  ArclengthStrategyGurobiSeparate.h  ArclengthStrategySimple.h  Data.h  FencedRegion.h  FencedRegionRepresentativeCalculator.h  ManifoldnessAwareVertexMap.h  MotorcycleGraph.h  MotorcycleOptionsInPatch.h  MultiplierStrategyAllInvalid.h  MultiplierStrategyIterativeRounding.h  Parametrization.h  ParametrizationData.h  ParametrizationHelper.h  ParametrizationInterfaces.h  ParametrizationStrategyLSCMForInteriorScaffoldForBoundary.h  Patch.h  PatchSet.h  PatchSplittingProblem.h  PolygonTriangulation.h  Singularity.h  Statistics.h  TargetLengthStrategyPatchAverage.h  TargetLengthStrategySimple.h  TexturePatch.h  common.h  meshio.h
include/gui/: ShaderPool.h  Viewer.h
src/: ArclengthStrategyGurobi.cpp  ArclengthStrategyGurobiSeparate.cpp  Data.cpp  FencedRegion.cpp  FencedRegionRepresentativeCalculator.cpp  MotorcycleGraph.cpp  MultiplierStrategyIterativeRounding.cpp  Parametrization.cpp  ParametrizationData.cpp  ParametrizationHelper.cpp  ParametrizationStrategyLSCMForInteriorScaffoldForBoundary.cpp  PolygonTriangulation.cpp  Singularity.cpp  Statistics.cpp  TexturePatch.cpp  common.cpp  main.cpp  meshio.cpp
src/gui/: ShaderPool.cpp  Viewer.cpp
